@@ -1,3 +1,5 @@
+* Remove password_sms authentication method
+
 Version 5.6.0 - 2020-05-04
 * Bug fixes (see mercurial logs for details)
 
